2012-05-15  Dan Bernstein  <mitz@apple.com>

        Ruby annotation is incorrectly identified as a paragraph boundary
        https://bugs.webkit.org/show_bug.cgi?id=86507

        Reviewed by Darin Adler.

        * editing/selection/paragraph-with-ruby-expected.txt: Added.
        * editing/selection/paragraph-with-ruby.html: Added.

2012-05-15  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Setting onended on a LocalMediaStream triggers an assertion in V8
        https://bugs.webkit.org/show_bug.cgi?id=86459

        Reviewed by Adam Barth.

        * fast/mediastream/LocalMediaStream-onended-expected.txt: Added.
        * fast/mediastream/LocalMediaStream-onended.html: Added.

2012-05-15  Brady Eidson  <beidson@apple.com>

        Skip a webarchive test I added that fails on WK2.

        * platform/wk2/Skipped:

2012-05-15  Jian Li  <jianli@chromium.org>

        Unreviewed. Updated chromium test expectations.

        * platform/chromium/test_expectations.txt:

2012-05-15  Florin Malita  <fmalita@chromium.org>

        [Chromium] Unreviewed. Rebaseline svg/repaint/mask-clip-target-transform-expected.png.

        * platform/chromium-mac/svg/repaint/mask-clip-target-transform-expected.png: Added.
        * platform/chromium-win/svg/repaint/mask-clip-target-transform-expected.png: Added.
        * platform/chromium/test_expectations.txt:

2012-05-15  Christophe Dumez  <christophe.dumez@intel.com>

        Unreviewed EFL gardening.

        Move http/tests/cookies/third-party-cookie-relaxing.html from Skipped
        list to test_expectations.txt. This test is expected to fail on EFL
        port and won't be fixed.

        * platform/efl/Skipped:
        * platform/efl/test_expectations.txt:

2012-05-15  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening. Remove duplicated entries because of disabled SUBPIXEL_LAYOUT.

        * platform/qt-4.8/Skipped:
        * platform/qt-5.0-wk1/Skipped: